fix font breaking on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
 	margin: 0;
 	height: 100%;
 	font-family: Kollektif;
+	src: url('Kollektif.ttf') format('truetype'),
+		 url('Kollektif.woff') format('woff'),
+		 url('Kollektif.woff2') format('woff2'),
+		 url('Kollektif.eot') format('embedded-opentype'),
+		 url('Kollektif.svg#Kollektif') format('svg');
 }
 
 #logo {
